--- a/assets/icomoon/style.css
+++ b/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?y0j8nw');
-  src:  url('fonts/icomoon.eot?y0j8nw#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?y0j8nw') format('truetype'),
-    url('fonts/icomoon.woff?y0j8nw') format('woff'),
-    url('fonts/icomoon.svg?y0j8nw#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?bbgihu');
+  src:  url('fonts/icomoon.eot?bbgihu#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?bbgihu') format('truetype'),
+    url('fonts/icomoon.woff?bbgihu') format('woff'),
+    url('fonts/icomoon.svg?bbgihu#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,6 +26,15 @@
 
 .icon-menu:before {
   content: "\e908";
+}
+.icon-warning:before {
+  content: "\e90b";
+}
+.icon-check:before {
+  content: "\e90c";
+}
+.icon-printer:before {
+  content: "\e90d";
 }
 .icon-plus:before {
   content: "\e909";
