--- a/assets/scss/elements/_product.scss
+++ b/assets/scss/elements/_product.scss
@@ -66,6 +66,11 @@
     }
 }
 
+.productList-view {
+    border-bottom: 1px solid $gray-200;
+    padding-bottom: 10px;
+}
+
 .productList {
     padding-top: 10px;
     padding-bottom: 10px;
