--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -17,3 +17,6 @@
 @import "elements/basket";
 @import "elements/modal";
 @import "elements/alert";
+@import "elements/table";
+@import "elements/status";
+@import "elements/pagination";
