--- a/assets/scss/elements/_basket.scss
+++ b/assets/scss/elements/_basket.scss
@@ -2,334 +2,344 @@
 *******************************************************************/
 .basket {
 
-}
+    .basket-product-list {
 
-.basket-product-list {
-
-    .basket-product-list-head {
-        border-bottom: 1px solid $gray-200;
-        padding: 5px 0;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: center;
-        align-items: center;
-        color: $gray-400;
-        h3 {
-            color: $black;
-            margin-bottom: 8px;
-        }
-        @media (max-width: 991px) {
-            .col-unit-price,
-            .col-amount,
-            .col-price,
-            .col-remove {
-                display: none;
-            }
-        }
-
-    }
-
-    .basket-product-list-row {
-        border-bottom: 1px solid $gray-200;
-        padding: 20px 0;
-        display: -ms-flexbox;
-        display: flex;
-        position: relative;
-        @media (min-width: 992px) {
+        .basket-product-list-head {
+            border-bottom: 1px solid $gray-200;
+            padding: 5px 0;
+            display: -ms-flexbox;
+            display: flex;
             -ms-flex-align: center;
             align-items: center;
-        }
-        @media (max-width: 991px) {
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        }
-
-    }
-
-    .basket-product-list-summary {
-        background: $gray-200;
-        padding: 50px 5% 45px;
-        position: sticky;
-        bottom: 0;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: end;
-        align-items: end;
-        -ms-flex-pack: end;
-        justify-content: flex-end;
-        font-size: 24px;
-        margin-bottom: 10px;
-        @media (max-width: 1199px) {
-            padding: 40px 5% 35px;
-        }
-        @media (max-width: 991px) {
-            position: relative;
-            padding: 30px 5% 25px;
-        }
-        @media (max-width: 767px) {
-            padding: 20px 5% 15px;
-            font-size: 20px;
-        }
-        @media (max-width: 575px) {
-            padding: 15px 5% 10px;
-            font-size: 18px;
-        }
-        .basket-price {
-            font-size: 50px;
-            white-space: nowrap;
-            @media (max-width: 1199px) {
-                font-size: 45px;
+            color: $gray-400;
+            h3 {
+                color: $black;
+                margin-bottom: 8px;
             }
             @media (max-width: 991px) {
-                font-size: 40px;
-            }
-            @media (max-width: 767px) {
-                font-size: 30px;
-            }
-            @media (max-width: 575px) {
-                font-size: 30px;
-            }
-            color: $app-color-1;
-            font-weight: 500;
-            margin-left: 30px;
-            small {
-                font-size: 24px;
-                font-weight: 400;
-                @media (max-width: 767px) {
-                    font-size: 18px;
-                }
-                @media (max-width: 575px) {
-                    font-size: 16px;
+                .col-unit-price,
+                .col-amount,
+                .col-price,
+                .col-remove {
+                    display: none;
                 }
             }
-        }
-    }
 
-    .col-product {
-        -ms-flex-positive: 1;
-        flex-grow: 1;
-
-        display: -ms-flexbox;
-        display: flex;
-        @media (max-width: 575px) {
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
         }
-        .col-product-img {
+
+        .basket-product-list-row {
+            border-bottom: 1px solid $gray-200;
+            padding: 20px 0;
+            display: -ms-flexbox;
+            display: flex;
             position: relative;
-            -ms-flex-preferred-size: 240px;
-            flex-basis: 240px;
-            min-width: 240px;
-
-            @media (max-width: 1199px) {
-                -ms-flex-preferred-size: 180px;
-                flex-basis: 180px;
-                min-width: 180px;
+            @media (min-width: 992px) {
+                -ms-flex-align: center;
+                align-items: center;
             }
-
-            @media (max-width: 767px) {
-                -ms-flex-preferred-size: 160px;
-                flex-basis: 160px;
-                min-width: 160px;
-            }
-
-            padding-right: 20px;
-            img {
-                max-width: 100%;
-                height: auto;
-            }
-            &[data-new] {
-                &::after {
-                    content: attr(data-new);
-                    display: inline-block;
-                    padding: 4px 24px;
-                    position: absolute;
-                    top: 20px;
-                    right: 20px;
-                    background: $app-color-2;
-                    color: $white;
-                    font-weight: 600;
-                    font-size: 14px;
-                    line-height: 1em;
-
-                    @media (max-width: 767px) {
-                        top: 10px;
-                    }
-
-                    @media (max-width: 575px) {
-                        top: 0;
-                    }
-                }
-            }
-        }
-        .col-product-desc {
-            font-size: 18px;
             @media (max-width: 991px) {
-                font-size: 16px;
+                -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
+            }
+
+        }
+
+        .basket-product-list-summary {
+            background: $gray-200;
+            padding: 50px 5% 45px;
+            position: sticky;
+            bottom: 0;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: end;
+            align-items: end;
+            -ms-flex-pack: end;
+            justify-content: flex-end;
+            font-size: 24px;
+            margin-bottom: 10px;
+            @media (max-width: 1199px) {
+                padding: 40px 5% 35px;
+            }
+            @media (max-width: 991px) {
+                position: relative;
+                padding: 30px 5% 25px;
+            }
+            @media (max-width: 767px) {
+                padding: 20px 5% 15px;
+                font-size: 20px;
             }
             @media (max-width: 575px) {
-                -ms-flex-preferred-size: 100%;
-                flex-basis: 100%;
-                min-width: 100%;
+                padding: 15px 5% 10px;
+                font-size: 18px;
             }
-            h2 {
-                font-size: 24px;
-                font-weight: 600;
+            .basket-price {
+                font-size: 50px;
+                white-space: nowrap;
                 @media (max-width: 1199px) {
-                    font-size: 20px;
-                    margin-bottom: 30px;
+                    font-size: 45px;
                 }
                 @media (max-width: 991px) {
-                    font-size: 18px;
-                    margin-bottom: 25px;
+                    font-size: 40px;
+                }
+                @media (max-width: 767px) {
+                    font-size: 30px;
+                }
+                @media (max-width: 575px) {
+                    font-size: 30px;
+                }
+                color: $app-color-1;
+                font-weight: 500;
+                margin-left: 30px;
+                small {
+                    font-size: 24px;
+                    font-weight: 400;
+                    @media (max-width: 767px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 575px) {
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+
+        .col-product {
+            -ms-flex-positive: 1;
+            flex-grow: 1;
+
+            display: -ms-flexbox;
+            display: flex;
+            @media (max-width: 575px) {
+                -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
+            }
+            .col-product-img {
+                position: relative;
+                -ms-flex-preferred-size: 240px;
+                flex-basis: 240px;
+                min-width: 240px;
+
+                @media (max-width: 1199px) {
+                    -ms-flex-preferred-size: 180px;
+                    flex-basis: 180px;
+                    min-width: 180px;
+                }
+
+                @media (max-width: 767px) {
+                    -ms-flex-preferred-size: 160px;
+                    flex-basis: 160px;
+                    min-width: 160px;
+                }
+
+                padding-right: 20px;
+                img {
+                    max-width: 100%;
+                    height: auto;
+                }
+                &[data-new] {
+                    &::after {
+                        content: attr(data-new);
+                        display: inline-block;
+                        padding: 4px 24px;
+                        position: absolute;
+                        top: 20px;
+                        right: 20px;
+                        background: $app-color-2;
+                        color: $white;
+                        font-weight: 600;
+                        font-size: 14px;
+                        line-height: 1em;
+
+                        @media (max-width: 767px) {
+                            top: 10px;
+                        }
+
+                        @media (max-width: 575px) {
+                            top: 0;
+                        }
+                    }
+                }
+            }
+            .col-product-desc {
+                font-size: 18px;
+                @media (max-width: 991px) {
+                    font-size: 16px;
+                }
+                @media (max-width: 575px) {
+                    -ms-flex-preferred-size: 100%;
+                    flex-basis: 100%;
+                    min-width: 100%;
+                }
+                h2 {
+                    font-size: 24px;
+                    font-weight: 600;
+                    @media (max-width: 1199px) {
+                        font-size: 20px;
+                        margin-bottom: 30px;
+                    }
+                    @media (max-width: 991px) {
+                        font-size: 18px;
+                        margin-bottom: 25px;
+                    }
+                }
+
+            }
+
+        }
+
+        .col-unit-price {
+            -ms-flex-preferred-size: 140px;
+            flex-basis: 140px;
+            min-width: 140px;
+            text-align: center;
+            .title {
+                display: none;
+                margin-bottom: 20px;
+                color: $gray-400;
+                border-bottom: 1px solid $gray-300;
+            }
+
+            @media (max-width: 991px) {
+                -ms-flex-preferred-size: auto;
+                flex-basis: auto;
+                min-width: auto;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                margin-left: 180px;
+                text-align: left;
+                @media (max-width: 767px) {
+                    margin-left: 0;
+                }
+                .title {
+                    display: block;
+                }
+            }
+        }
+
+        .col-amount {
+            -ms-flex-preferred-size: 140px;
+            flex-basis: 140px;
+            min-width: 140px;
+            text-align: center;
+            .title {
+                display: none;
+                margin-bottom: 10px;
+                color: $gray-400;
+                border-bottom: 1px solid $gray-300;
+            }
+
+            @media (max-width: 1199px) {
+                -ms-flex-preferred-size: 120px;
+                flex-basis: 120px;
+                min-width: 120px;
+            }
+
+            @media (max-width: 991px) {
+                -ms-flex-preferred-size: auto;
+                flex-basis: auto;
+                min-width: auto;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                text-align: left;
+                .title {
+                    display: block;
                 }
             }
 
-        }
-
-    }
-
-    .col-unit-price {
-        -ms-flex-preferred-size: 140px;
-        flex-basis: 140px;
-        min-width: 140px;
-        text-align: center;
-        .title {
-            display: none;
-            margin-bottom: 20px;
-            color: $gray-400;
-            border-bottom: 1px solid $gray-300;
-        }
-
-        @media (max-width: 991px) {
-            -ms-flex-preferred-size: auto;
-            flex-basis: auto;
-            min-width: auto;
-            -ms-flex-positive: 1;
-            flex-grow: 1;
-            margin-left: 180px;
-            text-align: left;
-            @media (max-width: 767px) {
-                margin-left: 0;
-            }
-            .title {
-                display: block;
-            }
-        }
-    }
-
-    .col-amount {
-        -ms-flex-preferred-size: 140px;
-        flex-basis: 140px;
-        min-width: 140px;
-        text-align: center;
-        .title {
-            display: none;
-            margin-bottom: 10px;
-            color: $gray-400;
-            border-bottom: 1px solid $gray-300;
-        }
-
-        @media (max-width: 1199px) {
-            -ms-flex-preferred-size: 120px;
-            flex-basis: 120px;
-            min-width: 120px;
-        }
-
-        @media (max-width: 991px) {
-            -ms-flex-preferred-size: auto;
-            flex-basis: auto;
-            min-width: auto;
-            -ms-flex-positive: 1;
-            flex-grow: 1;
-            text-align: left;
-            .title {
-                display: block;
+            .form-control {
+                text-align: center;
+                max-width: 60px;
+                margin: 0 auto;
+                @media (max-width: 991px) {
+                    margin-left: 0;
+                }
             }
         }
 
-        .form-control {
+        .col-price {
+            -ms-flex-preferred-size: 140px;
+            flex-basis: 140px;
+            min-width: 140px;
             text-align: center;
-            max-width: 60px;
-            margin: 0 auto;
-            @media (max-width: 991px) {
-                margin-left: 0;
-            }
-        }
-    }
-
-    .col-price {
-        -ms-flex-preferred-size: 140px;
-        flex-basis: 140px;
-        min-width: 140px;
-        text-align: center;
-        .title {
-            display: none;
-            margin-bottom: 20px;
-            color: $gray-400;
-            border-bottom: 1px solid $gray-300;
-        }
-
-        @media (max-width: 991px) {
-            -ms-flex-preferred-size: auto;
-            flex-basis: auto;
-            min-width: auto;
-            -ms-flex-positive: 1;
-            flex-grow: 1;
-            text-align: left;
-            .title {
-                display: block;
-            }
-        }
-    }
-
-    .col-remove {
-        -ms-flex-preferred-size: 70px;
-        flex-basis: 70px;
-        min-width: 70px;
-        text-align: center;
-        .title {
-            display: none;
-            margin-bottom: 20px;
-            color: $gray-400;
-            border-bottom: 1px solid $gray-300;
-        }
-
-        @media (max-width: 991px) {
-            -ms-flex-preferred-size: auto;
-            flex-basis: auto;
-            min-width: auto;
-            -ms-flex-positive: 1;
-            flex-grow: 1;
-            text-align: left;
-            .title {
-                display: block;
-            }
-        }
-
-        @media (max-width: 575px) {
-            position: absolute;
-            right: 0;
-            top: 20px;
             .title {
                 display: none;
+                margin-bottom: 20px;
+                color: $gray-400;
+                border-bottom: 1px solid $gray-300;
+            }
+
+            @media (max-width: 991px) {
+                -ms-flex-preferred-size: auto;
+                flex-basis: auto;
+                min-width: auto;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                text-align: left;
+                .title {
+                    display: block;
+                }
             }
         }
 
-        .btn-remove {
-            background: none;
-            border: 0;
-            font-size: 24px;
-            color: $gray-400;
-            cursor: pointer;
-            transition: color ease-in .2s;
-            &:hover {
-                color: $app-color-1;
+        .col-remove {
+            -ms-flex-preferred-size: 70px;
+            flex-basis: 70px;
+            min-width: 70px;
+            text-align: center;
+            .title {
+                display: none;
+                margin-bottom: 20px;
+                color: $gray-400;
+                border-bottom: 1px solid $gray-300;
+            }
+
+            @media (max-width: 991px) {
+                -ms-flex-preferred-size: auto;
+                flex-basis: auto;
+                min-width: auto;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                text-align: left;
+                .title {
+                    display: block;
+                }
+            }
+
+            @media (max-width: 575px) {
+                position: absolute;
+                right: 0;
+                top: 20px;
+                .title {
+                    display: none;
+                }
+            }
+
+            .btn-remove {
+                background: none;
+                border: 0;
+                font-size: 24px;
+                color: $gray-400;
+                cursor: pointer;
+                transition: color ease-in .2s;
+                &:hover {
+                    color: $app-color-1;
+                }
+            }
+        }
+
+    }
+
+    &.basket-orderPreview {
+        .basket-product-list {
+            .col-amount {
+                .title {
+                    margin-bottom: 20px;
+                }
             }
         }
     }
-}
 
+}
 
 @media (max-width: 1479px) {
 
