--- a/assets/scss/app.css
+++ b/assets/scss/app.css
@@ -222,8 +222,15 @@
 .white {
   color: #FFF; }
 
+.bg-white {
+  background: #FFF; }
+
 .black {
   color: #000; }
+
+.bg-black {
+  background: #000000;
+  background: linear-gradient(to bottom, #000000 0%, #222222 100%); }
 
 .gray-100 {
   color: #F6F6F6; }
@@ -3619,12 +3626,11 @@ header {
   color: #FFF;
   margin-bottom: 54px;
   width: 100%;
-  letter-spacing: .075em; }
+  letter-spacing: .075em;
+  min-height: 86px; }
   header .container {
     padding-top: 20px;
     padding-bottom: 20px;
-    background: -moz-linear-gradient(left, #000000 27%, #414141 52%, #414141 56%, #000000 84%);
-    background: -webkit-linear-gradient(left, #000000 27%, #414141 52%, #414141 56%, #000000 84%);
     background: linear-gradient(to right, #000000 27%, #414141 52%, #414141 56%, #000000 84%); }
     @media (max-width: 991px) {
       header .container {
@@ -3783,6 +3789,8 @@ header {
             header .navbar .userbar-nav .nav-item .nav-link.btn::after {
               display: none; }
     header .navbar .basket {
+      background: none;
+      border: 0;
       white-space: nowrap;
       margin-left: 60px; }
       @media (min-width: 768px) {
@@ -4160,7 +4168,77 @@ main strong {
 
 /* basket
 *******************************************************************/
-.basket .basket-product-list .basket-product-list-head {
+.basket-aside {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  bottom: 0;
+  height: 100vh;
+  width: 400px;
+  background: #FFF;
+  z-index: 11;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+  transition: transform ease-out .3s;
+  transform: translateX(0);
+  overflow-y: auto;
+  overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch; }
+  .basket-aside.opened {
+    transform: translateX(-400px); }
+  @media (max-width: 480px) {
+    .basket-aside {
+      width: 90vw; }
+      .basket-aside.opened {
+        transform: translateX(-90vw); } }
+  .basket-aside .basket-aside-header {
+    background: linear-gradient(to right, #292929 0, #292929 16%, #000000 44%);
+    min-height: 86px;
+    position: relative;
+    color: #FFF;
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500; }
+    .basket-aside .basket-aside-header .colse-btn {
+      color: #D20018;
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      margin-top: -12px;
+      font-size: 20px;
+      cursor: pointer;
+      transition: color ease-in .2s; }
+      .basket-aside .basket-aside-header .colse-btn:hover {
+        color: #FFF; }
+  .basket-aside .basket-aside-body {
+    padding: 20px; }
+    .basket-aside .basket-aside-body .basket-product-list .col-product {
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap; }
+      .basket-aside .basket-aside-body .basket-product-list .col-product .col-product-img {
+        -ms-flex-preferred-size: 140px;
+        flex-basis: 140px;
+        min-width: 140px; }
+      .basket-aside .basket-aside-body .basket-product-list .col-product .col-product-desc {
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+        min-width: auto; }
+        .basket-aside .basket-aside-body .basket-product-list .col-product .col-product-desc h2 {
+          font-size: 18px;
+          margin-bottom: 25px; }
+    .basket-aside .basket-aside-body .basket-product-list .col-amount,
+    .basket-aside .basket-aside-body .basket-product-list .col-unit-price {
+      text-align: left; }
+    .basket-aside .basket-aside-body .basket-product-list .basket-product-list-summary {
+      display: block;
+      text-align: center;
+      padding: 20px 5% 25px; }
+      .basket-aside .basket-aside-body .basket-product-list .basket-product-list-summary .basket-price {
+        margin-left: 0;
+        margin-top: 20px;
+        display: block; }
+
+.basket-product-list .basket-product-list-head {
   border-bottom: 1px solid #e2e2e2;
   padding: 5px 0;
   display: -ms-flexbox;
@@ -4168,30 +4246,30 @@ main strong {
   -ms-flex-align: center;
   align-items: center;
   color: #a7a9ac; }
-  .basket .basket-product-list .basket-product-list-head h3 {
+  .basket-product-list .basket-product-list-head h3 {
     color: #000;
     margin-bottom: 8px; }
   @media (max-width: 991px) {
-    .basket .basket-product-list .basket-product-list-head .col-unit-price,
-    .basket .basket-product-list .basket-product-list-head .col-amount,
-    .basket .basket-product-list .basket-product-list-head .col-price,
-    .basket .basket-product-list .basket-product-list-head .col-remove {
+    .basket-product-list .basket-product-list-head .col-unit-price,
+    .basket-product-list .basket-product-list-head .col-amount,
+    .basket-product-list .basket-product-list-head .col-price,
+    .basket-product-list .basket-product-list-head .col-remove {
       display: none; } }
-.basket .basket-product-list .basket-product-list-row {
+.basket-product-list .basket-product-list-row {
   border-bottom: 1px solid #e2e2e2;
   padding: 20px 0;
   display: -ms-flexbox;
   display: flex;
   position: relative; }
   @media (min-width: 992px) {
-    .basket .basket-product-list .basket-product-list-row {
+    .basket-product-list .basket-product-list-row {
       -ms-flex-align: center;
       align-items: center; } }
   @media (max-width: 991px) {
-    .basket .basket-product-list .basket-product-list-row {
+    .basket-product-list .basket-product-list-row {
       -ms-flex-wrap: wrap;
       flex-wrap: wrap; } }
-.basket .basket-product-list .basket-product-list-summary {
+.basket-product-list .basket-product-list-summary {
   background: #e2e2e2;
   padding: 50px 5% 45px;
   position: sticky;
@@ -4205,76 +4283,76 @@ main strong {
   font-size: 24px;
   margin-bottom: 10px; }
   @media (max-width: 1199px) {
-    .basket .basket-product-list .basket-product-list-summary {
+    .basket-product-list .basket-product-list-summary {
       padding: 40px 5% 35px; } }
   @media (max-width: 991px) {
-    .basket .basket-product-list .basket-product-list-summary {
+    .basket-product-list .basket-product-list-summary {
       position: relative;
       padding: 30px 5% 25px; } }
   @media (max-width: 767px) {
-    .basket .basket-product-list .basket-product-list-summary {
+    .basket-product-list .basket-product-list-summary {
       padding: 20px 5% 15px;
       font-size: 20px; } }
   @media (max-width: 575px) {
-    .basket .basket-product-list .basket-product-list-summary {
+    .basket-product-list .basket-product-list-summary {
       padding: 15px 5% 10px;
       font-size: 18px; } }
-  .basket .basket-product-list .basket-product-list-summary .basket-price {
+  .basket-product-list .basket-product-list-summary .basket-price {
     font-size: 50px;
     white-space: nowrap;
     color: #D20018;
     font-weight: 500;
     margin-left: 30px; }
     @media (max-width: 1199px) {
-      .basket .basket-product-list .basket-product-list-summary .basket-price {
+      .basket-product-list .basket-product-list-summary .basket-price {
         font-size: 45px; } }
     @media (max-width: 991px) {
-      .basket .basket-product-list .basket-product-list-summary .basket-price {
+      .basket-product-list .basket-product-list-summary .basket-price {
         font-size: 40px; } }
     @media (max-width: 767px) {
-      .basket .basket-product-list .basket-product-list-summary .basket-price {
+      .basket-product-list .basket-product-list-summary .basket-price {
         font-size: 30px; } }
     @media (max-width: 575px) {
-      .basket .basket-product-list .basket-product-list-summary .basket-price {
+      .basket-product-list .basket-product-list-summary .basket-price {
         font-size: 30px; } }
-    .basket .basket-product-list .basket-product-list-summary .basket-price small {
+    .basket-product-list .basket-product-list-summary .basket-price small {
       font-size: 24px;
       font-weight: 400; }
       @media (max-width: 767px) {
-        .basket .basket-product-list .basket-product-list-summary .basket-price small {
+        .basket-product-list .basket-product-list-summary .basket-price small {
           font-size: 18px; } }
       @media (max-width: 575px) {
-        .basket .basket-product-list .basket-product-list-summary .basket-price small {
+        .basket-product-list .basket-product-list-summary .basket-price small {
           font-size: 16px; } }
-.basket .basket-product-list .col-product {
+.basket-product-list .col-product {
   -ms-flex-positive: 1;
   flex-grow: 1;
   display: -ms-flexbox;
   display: flex; }
   @media (max-width: 575px) {
-    .basket .basket-product-list .col-product {
+    .basket-product-list .col-product {
       -ms-flex-wrap: wrap;
       flex-wrap: wrap; } }
-  .basket .basket-product-list .col-product .col-product-img {
+  .basket-product-list .col-product .col-product-img {
     position: relative;
     -ms-flex-preferred-size: 240px;
     flex-basis: 240px;
     min-width: 240px;
     padding-right: 20px; }
     @media (max-width: 1199px) {
-      .basket .basket-product-list .col-product .col-product-img {
+      .basket-product-list .col-product .col-product-img {
         -ms-flex-preferred-size: 180px;
         flex-basis: 180px;
         min-width: 180px; } }
     @media (max-width: 767px) {
-      .basket .basket-product-list .col-product .col-product-img {
+      .basket-product-list .col-product .col-product-img {
         -ms-flex-preferred-size: 160px;
         flex-basis: 160px;
         min-width: 160px; } }
-    .basket .basket-product-list .col-product .col-product-img img {
+    .basket-product-list .col-product .col-product-img img {
       max-width: 100%;
       height: auto; }
-    .basket .basket-product-list .col-product .col-product-img[data-new]::after {
+    .basket-product-list .col-product .col-product-img[data-new]::after {
       content: attr(data-new);
       display: inline-block;
       padding: 4px 24px;
@@ -4287,44 +4365,44 @@ main strong {
       font-size: 14px;
       line-height: 1em; }
       @media (max-width: 767px) {
-        .basket .basket-product-list .col-product .col-product-img[data-new]::after {
+        .basket-product-list .col-product .col-product-img[data-new]::after {
           top: 10px; } }
       @media (max-width: 575px) {
-        .basket .basket-product-list .col-product .col-product-img[data-new]::after {
+        .basket-product-list .col-product .col-product-img[data-new]::after {
           top: 0; } }
-  .basket .basket-product-list .col-product .col-product-desc {
+  .basket-product-list .col-product .col-product-desc {
     font-size: 18px; }
     @media (max-width: 991px) {
-      .basket .basket-product-list .col-product .col-product-desc {
+      .basket-product-list .col-product .col-product-desc {
         font-size: 16px; } }
     @media (max-width: 575px) {
-      .basket .basket-product-list .col-product .col-product-desc {
+      .basket-product-list .col-product .col-product-desc {
         -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
         min-width: 100%; } }
-    .basket .basket-product-list .col-product .col-product-desc h2 {
+    .basket-product-list .col-product .col-product-desc h2 {
       font-size: 24px;
       font-weight: 600; }
       @media (max-width: 1199px) {
-        .basket .basket-product-list .col-product .col-product-desc h2 {
+        .basket-product-list .col-product .col-product-desc h2 {
           font-size: 20px;
           margin-bottom: 30px; } }
       @media (max-width: 991px) {
-        .basket .basket-product-list .col-product .col-product-desc h2 {
+        .basket-product-list .col-product .col-product-desc h2 {
           font-size: 18px;
           margin-bottom: 25px; } }
-.basket .basket-product-list .col-unit-price {
+.basket-product-list .col-unit-price {
   -ms-flex-preferred-size: 140px;
   flex-basis: 140px;
   min-width: 140px;
   text-align: center; }
-  .basket .basket-product-list .col-unit-price .title {
+  .basket-product-list .col-unit-price .title {
     display: none;
     margin-bottom: 20px;
     color: #a7a9ac;
     border-bottom: 1px solid #CCC; }
   @media (max-width: 991px) {
-    .basket .basket-product-list .col-unit-price {
+    .basket-product-list .col-unit-price {
       -ms-flex-preferred-size: auto;
       flex-basis: auto;
       min-width: auto;
@@ -4333,99 +4411,100 @@ main strong {
       margin-left: 180px;
       text-align: left; } }
   @media (max-width: 991px) and (max-width: 767px) {
-    .basket .basket-product-list .col-unit-price {
+    .basket-product-list .col-unit-price {
       margin-left: 0; } }
   @media (max-width: 991px) {
-      .basket .basket-product-list .col-unit-price .title {
+      .basket-product-list .col-unit-price .title {
         display: block; } }
-.basket .basket-product-list .col-amount {
+.basket-product-list .col-amount {
   -ms-flex-preferred-size: 140px;
   flex-basis: 140px;
   min-width: 140px;
   text-align: center; }
-  .basket .basket-product-list .col-amount .title {
+  .basket-product-list .col-amount .title {
     display: none;
     margin-bottom: 10px;
     color: #a7a9ac;
     border-bottom: 1px solid #CCC; }
   @media (max-width: 1199px) {
-    .basket .basket-product-list .col-amount {
+    .basket-product-list .col-amount {
       -ms-flex-preferred-size: 120px;
       flex-basis: 120px;
       min-width: 120px; } }
   @media (max-width: 991px) {
-    .basket .basket-product-list .col-amount {
+    .basket-product-list .col-amount {
       -ms-flex-preferred-size: auto;
       flex-basis: auto;
       min-width: auto;
       -ms-flex-positive: 1;
       flex-grow: 1;
       text-align: left; }
-      .basket .basket-product-list .col-amount .title {
+      .basket-product-list .col-amount .title {
         display: block; } }
-  .basket .basket-product-list .col-amount .form-control {
+  .basket-product-list .col-amount .form-control {
     text-align: center;
     max-width: 60px;
     margin: 0 auto; }
     @media (max-width: 991px) {
-      .basket .basket-product-list .col-amount .form-control {
+      .basket-product-list .col-amount .form-control {
         margin-left: 0; } }
-.basket .basket-product-list .col-price {
+.basket-product-list .col-price {
   -ms-flex-preferred-size: 140px;
   flex-basis: 140px;
   min-width: 140px;
   text-align: center; }
-  .basket .basket-product-list .col-price .title {
+  .basket-product-list .col-price .title {
     display: none;
     margin-bottom: 20px;
     color: #a7a9ac;
     border-bottom: 1px solid #CCC; }
   @media (max-width: 991px) {
-    .basket .basket-product-list .col-price {
+    .basket-product-list .col-price {
       -ms-flex-preferred-size: auto;
       flex-basis: auto;
       min-width: auto;
       -ms-flex-positive: 1;
       flex-grow: 1;
       text-align: left; }
-      .basket .basket-product-list .col-price .title {
+      .basket-product-list .col-price .title {
         display: block; } }
-.basket .basket-product-list .col-remove {
+.basket-product-list .col-remove {
   -ms-flex-preferred-size: 70px;
   flex-basis: 70px;
   min-width: 70px;
   text-align: center; }
-  .basket .basket-product-list .col-remove .title {
+  .basket-product-list .col-remove .title {
     display: none;
     margin-bottom: 20px;
     color: #a7a9ac;
     border-bottom: 1px solid #CCC; }
   @media (max-width: 991px) {
-    .basket .basket-product-list .col-remove {
+    .basket-product-list .col-remove {
       -ms-flex-preferred-size: auto;
       flex-basis: auto;
       min-width: auto;
       -ms-flex-positive: 1;
       flex-grow: 1;
       text-align: left; }
-      .basket .basket-product-list .col-remove .title {
+      .basket-product-list .col-remove .title {
         display: block; } }
   @media (max-width: 575px) {
-    .basket .basket-product-list .col-remove {
+    .basket-product-list .col-remove {
       position: absolute;
       right: 0;
       top: 20px; }
-      .basket .basket-product-list .col-remove .title {
+      .basket-product-list .col-remove .title {
         display: none; } }
-  .basket .basket-product-list .col-remove .btn-remove {
+  .basket-product-list .col-remove .btn-remove {
     background: none;
     border: 0;
     font-size: 24px;
     color: #a7a9ac;
     cursor: pointer;
     transition: color ease-in .2s; }
-    .basket .basket-product-list .col-remove .btn-remove:hover {
+    .basket-product-list .col-remove .btn-remove:hover {
       color: #D20018; }
+
 .basket.basket-orderPreview .basket-product-list .col-amount .title {
   margin-bottom: 20px; }
 
@@ -4434,8 +4513,6 @@ main strong {
 .modal .modal-content {
   border-radius: 0; }
   .modal .modal-content .modal-header {
-    background: -moz-linear-gradient(left, #414141 17%, #414141 26%, #000000 44%);
-    background: -webkit-linear-gradient(left, #414141 17%, #414141 26%, #000000 44%);
     background: linear-gradient(to right, #414141 17%, #414141 26%, #000000 44%);
     border-bottom: 0;
     border-radius: 0; }
@@ -4637,6 +4714,35 @@ main strong {
   .table.table-orders tbody tr td {
     border: 0;
     vertical-align: middle; }
+.table.table-price-list {
+  border: 1px solid #e2e2e2; }
+  .table.table-price-list thead {
+    background: #efefef; }
+    .table.table-price-list thead th {
+      font-weight: 700;
+      border-bottom-width: 1px;
+      vertical-align: middle;
+      text-align: center; }
+      .table.table-price-list thead th:first-child {
+        border-right: 1px solid #e2e2e2; }
+    .table.table-price-list thead .th-label {
+      text-align: right;
+      display: block;
+      color: #a7a9ac; }
+    .table.table-price-list thead .td-label {
+      text-align: left;
+      display: block;
+      color: #a7a9ac; }
+  .table.table-price-list tbody tr:nth-of-type(2n+1) {
+    background: #fbfbfb; }
+  .table.table-price-list tbody tr th,
+  .table.table-price-list tbody tr td {
+    vertical-align: middle;
+    text-align: center; }
+  .table.table-price-list tbody tr th {
+    border-right: 1px solid #e2e2e2;
+    text-align: left;
+    font-weight: 600; }
 
 /* status
 *******************************************************************/
