--- a/assets/scss/utilities/_helpers.scss
+++ b/assets/scss/utilities/_helpers.scss
@@ -155,7 +155,10 @@
         margin-left: -3px;
         margin-right: -3px;
     }
+}
 
+.mt-n10 {
+    margin-top: -10px;
 }
 
 @for $i from 1 through 20 {
